--- a/spartangwc/news.html
+++ b/spartangwc/news.html
@@ -170,6 +170,227 @@
                 </section>
         <!-- end news section -->
 
+         <section id="week1" class="news bg-white">
+                <div class="container">
+                    <div class="headline text-center">
+                        <div class="row">
+                            <div class="col-md-10 col-md-offset-1 text-center">
+                                <h2 class="section-title">Week 1</h2> <!-- begin week 1 summary -->
+                                <h4 class="section-title">Let's Begin!</h4>
+                            </div>
+                        </div>
+                    </div>
+                    <p>
+                        We kicked off the Spring 2022 version of Spartan Girls Who Code on Saturday with enthusiastic students
+                        and incredible mentors &mdash; we hope your student as just as excited as we are for the coming weeks!
+                    </p>
+                    <p>
+                        We as a club are so excited to introduce the world of coding to your student! Computer science and programming
+                        is all around us in everything we do, and it is so much fun to learn! During this course, we want all students
+                        to remember that they are learning something new, it might be challenging at times. But! &mdash; learning
+                        to overcome those challenges and how to have fun with it is just as important as learning the material. We
+                        hope your student keeps this in mind as we continue throughout the program.
+                    </p>
+                    <p>
+                        Before we dive into a full recap of Saturday's meeting, we'd like to share a few announcements.
+                    </p>
+                    <h4 class="text-center">Announcements</h4>
+                    <ul>
+                        <h4>1. Participant Pre-Survey</h4>
+                        <p>
+                            Students were encouraged to fill out the
+                            <a href="https://forms.gle/vMNFnsUfXH5rTR2V8">2022 SGWC Participant Pre-Survey</a>
+                            at Saturday's meeting, but not everyone submitted their responses.
+                            If your student has not yet completed the pre-survey,
+                            please have them do so before this Saturday's meeting.
+                        </p>
+                        <h4>2. Bonus Hour</h4>
+                        <p>
+                            Continuing as a <a href="http://technovation.cadl.org/">Technovation</a> and Girls Who Code tradition, we'll be hosting
+                            a SGWC "bonus hour" every <b>Thursday from 7:00-8:00p ET</b>
+                            (beginning this Thursday, 1/27) open to all SGWC
+                            participants. SGWC mentors will be available on Zoom during the bonus hour
+                            to resolve technical difficulties, dive deeper into the coding concepts we've learned,
+                            or to talk about computer science in general!
+                        </p>
+                        <p>
+                            Use the Zoom link below to join us for a bonus hour of fun each week.
+                            The password for our bonus hour will always be the same as the password from the
+                            previous Saturday's meeting (sent via email only).
+                        </p>
+                        <ul>
+                            <li style="list-style: disc"><b>Zoom Link:</b> <a href="https://msu.zoom.us/j/92450527619">https://msu.zoom.us/j/92450527619</a> (password is same as the one for your Cohort Zoom)</li>
+                        </ul>
+                        <h4>3. Girls Who Code Summer Programs</h4>
+                        <p>
+                            The national organization of Girls Who Code is offering <b>free</b>, virtual summer opportunities for high school students from
+                            <b>June 17 - August 12</b>, and the application is <a href="https://girlswhocodesm.smapply.io/?utm_source=Domestic+Campaign+Monitor&utm_medium=Campaign+Monitor&utm_campaign=Campaign+Monitor+2022">OPEN.</a>
+                        </p>
+                        <p>
+                            The <b>Summer Immersion Program (SIP)</b> is a live, virtual, 2-week intro computer science course for 9th-11th graders. You will learn
+                            HTML, CSS, and JavaScript while getting an inside look into the tech industry through company sponsors.
+                        </p>
+                        <p>
+                            The <b>Self-Paced Program</b> is a flexible computer science course for 9th-12th graders who prefer not to adhere to a strict schedule.
+                            Participants can choose to earn beginner-level badges in HTML, CSS, and JavaScript (for web development) or an intermediate-level badge in
+                            Python (for cybersecurity). Students will also have the chance to build a community through weekly sessions and Girls Who Code activities.
+                        </p>
+                        <p>
+                            If you are interested, the application linked above only takes about 15-20 minutes to complete, and doesn't require GPA, transcripts,
+                            or recommendations!
+                        </p>
+                        <h4>4. Looking Ahead</h4>
+                        <p>
+                            We'll see you again this <b>Saturday, 1/29 at 10a ET</b> for our second SGWC meeting of the spring, where we will review last weeks material
+                            and begin learning about text + links in webpages!
+                        </p>
+                        <h4>5. Questions?</h4>
+                        <p>
+                            As always, please reach out with any questions / concerns / ideas / feedback to <a href="mailto:info@spartangwc.org">info@spartangwc.org</a>.
+                        </p>
+                    </ul>
+                    <h4 class="text-center">Meeting Recap</h4>
+                    <p>
+                        Mentors welcomed participants in their Cohort Zoom rooms, and as students rolled in
+                        mentor-student bonding had already begun! As much as we miss seeing everyone in person
+                        at the Engineering Building on MSU's campus, we loved seeing some students turn their
+                        cameras on and start engaging with the mentors! 
+                    </p>
+                    <p>
+                        To kick things off, each cohort participated in an Icebreaker via Google Jamboard &mdash; a collaborative and digital
+                        whiteboard where students can share their answers on virtual sticky notes. We used it as an opportunity begin getting to
+                        know the students and the mentors by having questions and would-you-rather statements to answer as a group! We
+                        got great student engagement and found out some cool information about our cohorts.
+                    </p>
+                    <div align="middle" class="col-md-12" style="padding-top: 2em; padding-bottom: 2em">
+                        <div class="row">
+                            <div class="col-md-12" align="middle">
+                                <img class="shadow-lg" src="assets/img/ss22photos/week1/navy-cohort-week-1-icebreaker.PNG" width=75%>
+                            </div>
+                        </div>
+                        <br>
+                        <div class="row">
+                            <p><i>One of our Jamboards from the Navy Cohort - all very good ideas!</i></p>
+                        </div>
+                    </div>
+                    <p>
+                        Following the icebreaker, participants completed a program pre-survey which will help us
+                        evaluate and improve SGWC in future years.
+                        We've learned a lot from pre- and post-surveys in past years&mdash;we truly
+                        appreciate our participants' thoughtful feedback! If your student did not complete the
+                        pre-survey, please encourage them to do so <a href="https://forms.gle/8hQACmkWRHjBUrCK6">at this link</a>.
+                    </p>
+                    <p>
+                        Next, each cohort collaborated to write a club contract setting goals and expectations for
+                        future meetings, and set up CodeHS accounts for use in the coming weeks.
+                        We'll be working through the <a href="https://codehs.com/course/web_design_matisse/overview">
+                            "Web Design (Matisse)"
+                        </a>
+                        course offered by CodeHS!
+                    </p>
+                    <div align="middle" class="col-md-12" style="padding-top: 2em; padding-bottom: 2em">
+                        <div class="row">
+                            <div class="col-md-6" align="middle">
+                                <img class="shadow-lg" src="assets/img/ss22photos/week1/blackcohortcontract.PNG" height=300px>
+                            </div>
+                            <div class="col-md-6" align="middle">
+                                <img class="shadow-lg" src="assets/img/ss22photos/week1/tealcohortcontract.PNG" height=300px>
+                            </div>
+                        </div>
+                        <br>
+                        <div class="row">
+                            <p><i>A couple of the cohort club contracts - looking good!</i></p>
+                        </div>
+                    </div>
+                    <p>
+                        Finally, we encouraged participants to fill out an end-of-meeting survey to gauge
+                        comfort with Zoom and CodeHS, and received overwhelmingly positive responses!
+                        It's always scary to try something new, so we were glad to hear students that the students got off to a good start.
+                        That said, we want to make sure <i>everyone</i> has a great time at SGWC this spring&mdash;so
+                        if you're having issues with anything, please send us an email at <a href="mailto:info@spartangwc.org">info@spartangwc.org</a>.
+                    </p>
+                    <h4 class="text-center">Mentor Spotlight</h4>
+                    <p>
+                        SGWC is led, organized, and run by MSU students with the help of <a href="https://www.egr.msu.edu/people/profile/iselava1">Teresa Isela Vandersloot</a>,
+                        <a href="https://www.egr.msu.edu/people/profile/ldillon">Dr. Laura Dillon</a> and <a href="https://www.egr.msu.edu/people/profile/wulfekuh">Dr. Marilyn Wulfekulher</a>,
+                        and we thought it would be fun to
+                        introduce a few of our <a href="contact.html#team">team members</a> each week.
+                    </p>
+                    <p>
+                        To kick off our mentor spotlight series, we'd like to introduce the Spring 2022 Lead Mentors!
+                    </p>
+
+                    <!-- mentor photos -->
+                    <div align="middle" class="col-md-12" style="padding-top: 2em; padding-bottom: 2em">
+                        <div class="row">
+                            <div class="col-md-6" align="middle">
+                                <img class="shadow-lg" src="assets/img/ss22photos/team/averi_ss20.jpg" height="350">
+                                <br><br>
+                                <p><i>Averi Justice</i></p>
+                            </div>
+                            <div class="col-md-6" align="middle">
+                                <img class="shadow-lg" src="assets/img/ss22photos/team/SophieMartin.jpeg" height="350">
+                                <br><br>
+                                <p><i>Sophie Martin</i></p>
+                            </div>
+                        </div>
+                        <!-- mentor QA -->
+                        <div class="row">
+                            <div class="col-md-6" align="left"> <!-- Averi -->
+                                <p>
+                                    <b>What are you studying?</b><br>
+                                    I'm a senior majoring in Computer Science Engineering and minoring in German and Computational Math, Science, and Engineering!
+                                </p>
+                                <p>
+                                    <b>How did you become interested in computer science?</b><br>
+                                    I became interested in computer science in high school when my brother showed me the
+                                    <a href="https://www.google.com/search?tbm=isch&as_q=flame%20fractal">flame fractals</a>
+                                    he made in his AP Computer Science class.
+                                </p>
+                                <p>
+                                    <b>What's something cool you've done with computer science?</b><br>
+                                    I've done a lot of cool things with computer science, from making games like tic-tac-toe
+                                    and rock-paper-scissors, to designing an app that detects texting and driving.
+                                </p>
+                                <p>
+                                    <b>What are you hoping to do with computer science in the future?</b><br>
+                                    The great thing about Computer Science is that it's used in pretty much any field you could
+                                    think of - I'm excited to solve interesting problems with CS wherever I end up.
+                                </p>
+                            </div>
+                            <div class="col-md-6" align="left"> <!-- Sophie -->
+                                <p>
+                                    <b>What are you studying?</b><br>
+                                    I'm a senior majoring in Computer Science with a minor in Graphic Design!
+                                </p>
+                                <p>
+                                    <b>How did you become interested in computer science?</b><br>
+                                    I became interested in computer science my freshman year of high school where I took an Intro to Web Design course
+                                    and learned how to make websites &mdash; very similar to what our students are doing this spring!
+                                </p>
+                                <p>
+                                    <b>What's something cool you've done with computer science?</b><br>
+                                    I've built a personal website and a website version of the boardgame "Sorry!"
+                                </p>
+                                <p>
+                                    <b>What are you hoping to do with computer science in the future?</b><br>
+                                    In the future I'm hoping to continue working on websites and learn more about design & user experience!
+
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <p>
+                        Thanks for making last Saturday a blast, everyone. We can't wait to see you this Saturday!
+                    </p>
+                    <p>
+                        -The SGWC Team
+                    </p>
+
+
+                    </div>
+                </section> <!-- end week 1 summary -->
+
 <!--
 
         <section class="news bg-white">  <!-- begin Spring 2021 section //>
