finish week 2 newsletter

--- a/belizeweb/team.html
+++ b/belizeweb/team.html
@@ -57,6 +57,7 @@
 									<div class="row gtr-uniform">
 										<div class="col-12"><span class="image fit"><img src="images/2019 MSU mentors1152x326r72.jpg" alt="" /></span></div>
 
+										<!-- Mentors -->
 										<div class="col-12"><span><center><h2>MSU Student Mentors</h2></center></span></div>
 
 										<div class="col-4"><span class="image fit"><img src="images/teamPhotos/andrew750x1000r72.jpg" alt="Photo of Andrew" /></span>
@@ -160,7 +161,16 @@
 											</center>
 										</div>
 
+										<div class="col-4"><span class="image fit"><img src="images/teamPhotos/judy750x1000.jpg" alt="Photo of Joao Vitor" /></span>
+											<center>
+												<h3>Judy</h3>
+												Junior<br>
+												Computer Science
+											</center>
+										</div>
 
+
+										<!-- Advisors -->
 										<div class="col-12"><span><center><h2>MSU &amp; Pathlight Advisers</h2><center></span></div>
 
 										<div class="col-4"><span class="image fit"><img src="images/teamPhotos/consueloGodfrey750x1000.jpeg" alt="Photo of Consuelo" /></span>
