--- a/belizeweb/resources.html
+++ b/belizeweb/resources.html
@@ -55,137 +55,128 @@
 							<span class="image main"><img src="images/hal-gatewood-tZc3vjPCk-Q-unsplash1152x326r72.jpg" alt="Photo of a person reading a newspaper. Superimposed on a blurred forest background." /></span>
 
 							<section>
-								<center><h2>CODE HS</h2></center>
+								<h2>Slides</h2>
+								<p>
+									Slides from each meeting will be posted here for students to review.
+                				</p>
+								<ul>
+									<li style="list-style: disc;">
+										<a href="https://docs.google.com/presentation/d/1voR2DPOFg6djNMcHOFwbmBDRqj83s7cl6N6Q3QXHRBQ/edit?usp=sharing" target="_blank">01 - Orientation - 1.11.22</a>
+									</li>
+									<li style="list-style: disc;">
+										<a href="https://docs.google.com/presentation/d/1-06N9YGvyZeAQ07Lb9ssZ6HGCQpXUrrROQQrIV62Xno/edit?usp=sharing" target="_blank">02 - Intro - 1.15.22</a>
+									</li>
+									<li style="list-style: disc;">
+										<a href="https://docs.google.com/presentation/d/15UESy7Xp8dVHrA_X2rvWADFqQhEJw-sbVK1wRW-qG6o/edit?usp=sharing" target="_blank">03 - Intro Review - 1.18.22</a>
+									</li>
+									<li style="list-style: disc;">
+										<a href="https://docs.google.com/presentation/d/1dlql6l9ht8-BS7z-IDtPWKCO-ZxZW59AtrIfClEhAH0/edit?usp=sharing" target="_blank">04 - For Loops - 1.22.22</a>
+									</li>
+									<li style="list-style: disc;">
+										<a href="https://docs.google.com/presentation/d/1oBpMRmxTvKoiEUXn7uVKMKt0lA9fVi-mfpQuCdwz9B4/edit?usp=sharing" target="_blank">05 - For Loops Review - 1.25.22</a>
+									</li>
+								</ul>
+							</section>
 
+							<section>
+								<h2>CodeHS</h2>
 								<p>
-									The central educational website we will use, <a href="https://codehs.com/" target="_blank">CodeHS</a>, is an online interactive platform that offers coding classes in Python, Java, HTML, and several other contemporary languages.
-                </p>
-								<p>
-			  					We will work through the CodeHS <a href="https://codehs.com/library/course/4114/module/5626" target="_blank"> Intro to Python with Tracy the Turtle</a>.
-			  					The curriculum teaches Python commands, functions, and control structures in the context of drawing pictures and solving puzzles with Turtle Graphics.
-                </p>
+									The central educational website we will use, <a href="https://codehs.com/" target="_blank">CodeHS</a>, is an online interactive platform that offers coding classes in Python, Java, HTML, and several other contemporary languages. We will work through the CodeHS <a href="https://codehs.com/library/course/4114/module/5626" target="_blank"> Intro to Python with Tracy the Turtle</a>. The curriculum teaches Python commands, functions, and control structures in the context of drawing pictures and solving puzzles with Turtle Graphics.
+               					</p>
 							</section>
 
 							<section>  <!-- begin Coding environments section -->
-								<center><h2>Coding Environments</h2></center>
+								<h2>Coding Environments</h2>
 								<p>
 									Other high-quality coding environments which coders may enjoy exploring include:
 								</p>
 								<ul>
-										<li style="list-style: circle">
-												<p>
-														<a href="https://www.codesters.com/" target="_blank">Codesters</a> &mdash; A self-paced environment for learning Python and creating personal projects. Requires an account and password.
-												</p>
+										<li style="list-style: disc">
+											<a href="https://www.codesters.com/" target="_blank">Codesters</a> &mdash; A self-paced environment for learning Python and creating personal projects. Requires an account and password.
 										</li>
 
-										<li  style="list-style: circle">
-												<p>
-														<a href="https://repl.it/languages/python" target="_blank">Repl.it</a> &mdash; A cloud coding environment supporting multiple languages, including Python, JavaScript, HTML, C++, and more.
-												</p>
+										<li  style="list-style: disc">
+											<a href="https://repl.it/languages/python" target="_blank">Repl.it</a> &mdash; A cloud coding environment supporting multiple languages, including Python, JavaScript, HTML, C++, and more.
 										</li>
 
-										<li  style="list-style: circle">
-												<p>
-														<a href="https://www.khanacademy.org/computing/computer-programming/programming/intro-to-programming/a/learning-programming-on-khan-academy" target="_blank">Khan Academy</a> &mdash; Used for live programming/editing, sharing code, and video resources.
-												</p>
-
-										<li style="list-style: circle">
-												<p>
-														<a href="http://microbit.org/guide/">micro:bit</a> &mdash; Used for programming a BBC Micro Bit, a computer system half the size of a credit card designed by the British Broadcasting Corporation for use in computer education in the UK.
-												</p>
+										<li  style="list-style: disc">
+											<a href="https://www.khanacademy.org/computing/computer-programming/programming/intro-to-programming/a/learning-programming-on-khan-academy" target="_blank">Khan Academy</a> &mdash; Used for live programming/editing, sharing code, and video resources.
 										</li>
 
-										<li  style="list-style: circle">
-												<p>
-														<a href="http://processingjs.org/" >ProcessingJS </a> &mdash; API used to enhance assignments.
-												</p>
+										<li style="list-style: disc">
+											<a href="http://microbit.org/guide/">micro:bit</a> &mdash; Used for programming a BBC Micro Bit, a computer system half the size of a credit card designed by the British Broadcasting Corporation for use in computer education in the UK.
+										</li>
 
-										<li  style="list-style: circle">
-												<p>
-														<a href="http://jsfiddle.net/" >JSFiddle </a> &mdash; Used for building websites and sharing code.
-												</p>
+										<li  style="list-style: disc">
+											<a href="http://processingjs.org/" >ProcessingJS </a> &mdash; API used to enhance assignments.
+										</li>
 
-										<li  style="list-style: circle">
-												<p>
-														<a href="https://www.fluidui.com/editor/live/">Fluid UI</a> &mdash; Live editor used for building storyboarding/wireframing and building websites
-												</p>
-								</ul>
+										<li  style="list-style: disc">
+											<a href="http://jsfiddle.net/" >JSFiddle </a> &mdash; Used for building websites and sharing code.
+										</li>
+
+										<li  style="list-style: disc">
+											<a href="https://www.fluidui.com/editor/live/">Fluid UI</a> &mdash; Live editor used for building storyboarding/wireframing and building websites
+										</li>
+									</ul>
 							</section>  <!-- Coding environments section -->
 
 							<section>
-								<center><h2>Online Learning</h2></center>
-
+								<h2>Online Learning</h2>
 								<p>
-										There are countless opportunities to learn coding online free of charge and at your own pace.  Some that we recommend include:
+									There are countless opportunities to learn coding online free of charge and at your own pace.  Some that we recommend include:
 								</p>
-
 								<ul>
-										<li style="list-style: circle">
-										<p>
+										<li style="list-style: disc">
 												<a href="https://www.pbslearningmedia.org/collection/crash-course-computer-science" target="_blank">Crash Course Computer Science</a> &mdash; Video series tracing the origins of computers, explaining the big ideas that gave us our current hardware and software, discussing how and why our smart devices just keep getting smarter, and much more. Produced by PBS Digital Studios.
-										</p>
 										</li>
 
-										<li style="list-style: circle">
-												<p>
-														<a href="https://www.madewithcode.com/" target="_blank">Made with Code</a> "inspires girls to pursue their dreams with code" &mdash; Find projects challenges, mentor vignettes, and event links.
-												</p>
+										<li style="list-style: disc">
+											<a href="https://www.madewithcode.com/" target="_blank">Made with Code</a> "inspires girls to pursue their dreams with code" &mdash; Find projects challenges, mentor vignettes, and event links.
 										</li>
-										<li style="list-style: circle">
-												<p>
-														<a href="https://www.codecademy.com/" target="_blank">Codecademy</a> &mdash; Learn to code interactively, for free. Offers lessons in Python, JavaScript, Ruby, HTML/CSS, and more.
-												</p>
+
+										<li style="list-style: disc">
+											<a href="https://www.codecademy.com/" target="_blank">Codecademy</a> &mdash; Learn to code interactively, for free. Offers lessons in Python, JavaScript, Ruby, HTML/CSS, and more.
 										</li>
-										<li style="list-style: circle">
-												<p>
-														<a href="https://csfirst.withgoogle.com/s/en/home" target="_blank">CSFirst</a> &mdash; An offering from Google to inspire kids to create with technology through free computer science clubs.
-												</p>
+
+										<li style="list-style: disc">
+											<a href="https://csfirst.withgoogle.com/s/en/home" target="_blank">CSFirst</a> &mdash; An offering from Google to inspire kids to create with technology through free computer science clubs.
 										</li>
-										<li style="list-style: circle">
-												<p>
-														<a href="https://pencilcode.net/" target="_blank">Pencil Code</a> &mdash; A collaborative programming site for drawing art, playing music, and creating games. It is also a place to experiment with mathematical functions, geometry, graphing, webpages, simulations, and algorithms. Programs are open for all to see and copy.
-												</p>
+
+										<li style="list-style: disc">
+											<a href="https://pencilcode.net/" target="_blank">Pencil Code</a> &mdash; A collaborative programming site for drawing art, playing music, and creating games. It is also a place to experiment with mathematical functions, geometry, graphing, webpages, simulations, and algorithms. Programs are open for all to see and copy.
 										</li>
-										<li style="list-style: circle">
-												<p>
-														<a href="https://earsketch.gatech.edu/" target="_blank">EarSketch</a> &mdash; Helps you learn coding through music. Coders use sounds from the EarSketch library or sounds they create, along with Python or JavaScript code, to produce studio quality music.
-												</p>
+
+										<li style="list-style: disc">
+											<a href="https://earsketch.gatech.edu/" target="_blank">EarSketch</a> &mdash; Helps you learn coding through music. Coders use sounds from the EarSketch library or sounds they create, along with Python or JavaScript code, to produce studio quality music.
 										</li>
-										<li style="list-style: circle">
-												<p>
-														<a href="https://chrome.google.com/webstore/detail/coding-with-chrome/becloognjehhioodmnimnehjcibkloed?hl=en-US" target="_blank">Coding with Chrome</a> &mdash; A Google project to provide an easy-to-use coding environment  within the Chrome browser that even works offline. Currently, users are able to create programs using Blockly, Coffeescript, HTML, Javascript with output to Logo Turtle and/or connected toys such as the Sphero and Lego Mindstorms. Filled with examples and tutorials at several levels.
-												</p>
+
+										<li style="list-style: disc">
+											<a href="https://chrome.google.com/webstore/detail/coding-with-chrome/becloognjehhioodmnimnehjcibkloed?hl=en-US" target="_blank">Coding with Chrome</a> &mdash; A Google project to provide an easy-to-use coding environment  within the Chrome browser that even works offline. Currently, users are able to create programs using Blockly, Coffeescript, HTML, Javascript with output to Logo Turtle and/or connected toys such as the Sphero and Lego Mindstorms. Filled with examples and tutorials at several levels.
 										</li>
-										<li style="list-style: circle">
-												<p>
-														<a href="https://studio.code.org/" target="_blank">Code Studio</a> from <a href="http://Code.org">Code.org</a> &mdash; Home to numerous online courses that teach Computer Science fundamentals to all ages.
-												</p>
+
+										<li style="list-style: disc">
+											<a href="https://studio.code.org/" target="_blank">Code Studio</a> from <a href="http://Code.org">Code.org</a> &mdash; Home to numerous online courses that teach Computer Science fundamentals to all ages.
 										</li>
-										<li style="list-style: circle">
-												<p>
-														<a href="http://codingbat.com" target="_blank">CodingBat</a> &mdash;
-														A free site of live coding problems to build coding skill in Java and <a href="http://codingbat.com/python">Python</a>. CodingBat is a project by Nick Parlante, a computer science lecturer at Stanford.
-												</p>
+
+										<li style="list-style: disc">
+											<a href="http://codingbat.com" target="_blank">CodingBat</a> &mdash; A free site of live coding problems to build coding skill in Java and <a href="http://codingbat.com/python">Python</a>. CodingBat is a project by Nick Parlante, a computer science lecturer at Stanford.
 										</li>
-										<li style="list-style: circle">
-												<p>
-														<a href="http://pythontutor.com/" target="_blank">PythonTutor</a> &mdash; Created by Philip Guo, helps people overcome a fundamental barrier to learning programming: understanding what happens as the computer executes each line of a program's source code.
-												</p>
+
+										<li style="list-style: disc">
+											<a href="http://pythontutor.com/" target="_blank">PythonTutor</a> &mdash; Created by Philip Guo, helps people overcome a fundamental barrier to learning programming: understanding what happens as the computer executes each line of a program's source code.
 										</li>
-										<li style="list-style: circle">
-												<p>
-														<a href="http://learnpython.org/en/Welcome" target="_blank"> LearnPython.org</a> &mdash; Whether you are an experienced programmer or not, this website is intended for everyone who wishes to learn the Python programming language.
-												</p>
+
+										<li style="list-style: disc">
+											<a href="http://learnpython.org/en/Welcome" target="_blank"> LearnPython.org</a> &mdash; Whether you are an experienced programmer or not, this website is intended for everyone who wishes to learn the Python programming language.
 										</li>
-										<li style="list-style: circle">
-												<p>
-														<a href="http://www.pyschools.com/" target="_blank">PySchools</a> &mdash; A website designed to help you learn Python programming. The website contains tutorials, practices, and challenge problems. It also has an <a href="http://doc.pyschools.com/console" target="_blank">online Python editor</a> with good reference examples.
-												</p>
+
+										<li style="list-style: disc">
+											<a href="http://www.pyschools.com/" target="_blank">PySchools</a> &mdash; A website designed to help you learn Python programming. The website contains tutorials, practices, and challenge problems. It also has an <a href="http://doc.pyschools.com/console" target="_blank">online Python editor</a> with good reference examples.
 										</li>
-										<li style="list-style: circle">
-												<p>
-														<a href="https://www.w3schools.com/" target="_blank">W3Schools</a> &mdash; A fantastic tutorial site for learning HTML, with examples of almost every web technology out there.
-												</p>
+
+										<li style="list-style: disc">
+											<a href="https://www.w3schools.com/" target="_blank">W3Schools</a> &mdash; A fantastic tutorial site for learning HTML, with examples of almost every web technology out there.
 										</li>
 								</ul>
 
