update contact pictures

--- a/spartangwc/contact.html
+++ b/spartangwc/contact.html
@@ -356,7 +356,7 @@
 
                                 <div class="col-md-3">
                                     <div class="team-member-box text-center">
-                                        <img src="assets/img/ss22photos/team/placeholder.gif" class="img-responsive center-block" alt="Photo of Christina">
+                                        <img src="assets/img/ss22photos/team/ChristinaTagayHeadshot750_1000.jpg" class="img-responsive center-block" alt="Photo of Christina">
                                         <div class="team-member-description">
                                             <div class="team-member-about">
                                                 <h4>Christina Tagay</h4>
@@ -380,11 +380,11 @@
 
                                 <div class="col-md-3">
                                     <div class="team-member-box text-center">
-                                        <img src="assets/img/ss22photos/team/ayokunleOsofisan750x1000r72.jpeg" class="img-responsive center-block" alt="Photo of Oyokunle">
+                                        <img src="assets/img/ss22photos/team/ayokunleOsofisan750x1000r72.jpeg" class="img-responsive center-block" alt="Photo of Ayokunle">
                                         <div class="team-member-description">
                                             <div class="team-member-about">
-                                                <h4>Oyokunle Osofisan</h4>
-                                                <p>??<br>??</p>
+                                                <h4>Ayokunle Osofisan</h4>
+                                                <p>Senior<br>Biosystems Engineering</p>
                                             </div>
                                         </div> <!-- end of /.team-member-description -->
                                     </div> <!-- end of /.team-member-box -->
@@ -400,7 +400,7 @@
 
                                 <div class="col-md-3">
                                     <div class="team-member-box text-center">
-                                        <img src="assets/img/ss22photos/team/placeholder.gif" class="img-responsive center-block" alt="Photo of Lisa">
+                                        <img src="assets/img/ss22photos/team/Lisa_Lipin_headshot750_1000.jpg" class="img-responsive center-block" alt="Photo of Lisa">
                                         <div class="team-member-description">
                                             <div class="team-member-about">
                                                 <h4>Lisa Lipin</h4>
@@ -412,7 +412,7 @@
 
                                 <div class="col-md-3">
                                     <div class="team-member-box text-center">
-                                        <img src="assets/img/ss22photos/team/placeholder.gif" class="img-responsive center-block" alt="Photo of Morghane">
+                                        <img src="assets/img/ss22photos/team/McAnellyPhoto750_1000.jpg" class="img-responsive center-block" alt="Photo of Morghane">
                                         <div class="team-member-description">
                                             <div class="team-member-about">
                                                 <h4>Morghane McAnelly</h4>
@@ -424,19 +424,19 @@
 
                                 <div class="col-md-3">
                                     <div class="team-member-box text-center">
-                                        <img src="assets/img/ss22photos/team/placeholder.gif" class="img-responsive center-block" alt="Photo of Naomi">
+                                        <img src="assets/img/ss22photos/team/luzalvarezheadshot750_1000.jpg" class="img-responsive center-block" alt="Photo of Luz">
                                         <div class="team-member-description">
                                             <div class="team-member-about">
-                                                <h4>Naomi Daniel</h4>
-                                                <p>First Year<br>Computer Science</p>
+                                                <h4>Luz Alvarez</h4>
+                                                <p>Sophomore<br>Mechanical Engineering</p>
                                             </div>
                                         </div> <!-- end of /.team-member-description -->
                                     </div> <!-- end of /.team-member-box -->
-                                </div> <!-- Naomi Daniel -->
+                                </div> <!-- Luz Alvarez -->
 
                                 <div class="col-md-3">
                                     <div class="team-member-box text-center">
-                                        <img src="assets/img/ss22photos/team/placeholder.gif" class="img-responsive center-block" alt="Photo of Jakob">
+                                        <img src="assets/img/ss22photos/team/JakobTherkelsenHeadshot750_1000.jpg" class="img-responsive center-block" alt="Photo of Jakob">
                                         <div class="team-member-description">
                                             <div class="team-member-about">
                                                 <h4>Jakob Therkelsen</h4>
@@ -517,14 +517,26 @@
                                       <div class="team-member-description">
                                           <div class="team-member-about">
                                               <h4>Connor Mears</h4>
-                                              <p>??<br>??</p>
+                                              <p>Senior<br>Computer Science</p>
                                           </div>
                                       </div> <!-- end of /.team-member-description -->
                                   </div> <!-- end of /.team-member-box -->
                               </div> <!-- Connor -->
 
+                              <div class="col-md-3">
+                                  <div class="team-member-box text-center">
+                                      <img src="assets/img/ss22photos/team/ZainabSalahHeadshot750_1000.JPG" class="img-responsive center-block" alt="Photo of Zainab">
+                                      <div class="team-member-description">
+                                          <div class="team-member-about">
+                                              <h4>Zainab Salah</h4>
+                                              <p>Senior<br>Chemical Engineering</p>
+                                          </div>
+                                      </div> <!-- end of /.team-member-description -->
+                                  </div> <!-- end of /.team-member-box -->
+                              </div> <!-- Zainab -->
+
                           </div>
-                      </div> <!-- Connor container -->
+                      </div> <!-- Connor, Zainab container -->
 
 
 
