--- a/spartangwc/contact.html
+++ b/spartangwc/contact.html
@@ -292,7 +292,7 @@
 
                               <div class="col-md-3">
                                   <div class="team-member-box text-center">
-                                      <img src="assets/img/ss22photos/team/AnnaClark750x1000_72R.png" class="img-responsive center-block" alt="Photo of Anna">
+                                      <img src="assets/img/ss22photos/team/Clark_Anna_headshot750_1000.jpg" class="img-responsive center-block" alt="Photo of Anna">
                                       <div class="team-member-description">
                                           <div class="team-member-about">
                                               <h4>Anna Clark</h4>
