added Averi's spotlight

--- a/spartangwc/news.html
+++ b/spartangwc/news.html
@@ -329,7 +329,7 @@
                                 <p><i>Averi Justice</i></p>
                             </div>
                             <div class="col-md-6" align="middle">
-                                <img class="shadow-lg" src="assets/img/ss22photos/team/SophieMartin.jpeg" height="350">
+                                <img class="shadow-lg" src="assets/img/ss22photos/team/sophieMartin750x1000r72.jpg" height="350">
                                 <br><br>
                                 <p><i>Sophie Martin</i></p>
                             </div>
@@ -339,23 +339,23 @@
                             <div class="col-md-6" align="left"> <!-- Averi -->
                                 <p>
                                     <b>What are you studying?</b><br>
-                                    I'm a senior majoring in Computer Science Engineering and minoring in German and Computational Math, Science, and Engineering!
+                                    I am a fourth year majoring in Computer Science with a minor in Spanish!
                                 </p>
                                 <p>
                                     <b>How did you become interested in computer science?</b><br>
-                                    I became interested in computer science in high school when my brother showed me the
-                                    <a href="https://www.google.com/search?tbm=isch&as_q=flame%20fractal">flame fractals</a>
-                                    he made in his AP Computer Science class.
+                                    I took Java as an elective my sophomore year in high school and found it very challenging but fun!
                                 </p>
                                 <p>
                                     <b>What's something cool you've done with computer science?</b><br>
-                                    I've done a lot of cool things with computer science, from making games like tic-tac-toe
-                                    and rock-paper-scissors, to designing an app that detects texting and driving.
+                                    One of my favorite memories is creating and teaching a summer coding camp in my hometown with fellow mentor Natalie K :)
                                 </p>
                                 <p>
                                     <b>What are you hoping to do with computer science in the future?</b><br>
-                                    The great thing about Computer Science is that it's used in pretty much any field you could
-                                    think of - I'm excited to solve interesting problems with CS wherever I end up.
+                                    I don’t have any specific project I plan to work on but I hope to continue doing Computer Science outreach wherever I end up!
+                                </p>
+                                <p>
+                                    <b>What advice do you have for our students?</b><br>
+                                    You don’t always have to be good at your hobbies as long as you love doing them — keep at it and you will get better!
                                 </p>
                             </div>
                             <div class="col-md-6" align="left"> <!-- Sophie -->
@@ -375,7 +375,10 @@
                                 <p>
                                     <b>What are you hoping to do with computer science in the future?</b><br>
                                     In the future I'm hoping to continue working on websites and learn more about design & user experience!
-
+                                </p>
+                                <p>
+                                    <b>What advice do you have for our students?</b><br>
+                                    Always ask questions &mdash; the mentors are here to help YOU!
                                 </p>
                             </div>
                         </div>
