--- a/spartangwc/news.html
+++ b/spartangwc/news.html
@@ -182,7 +182,7 @@
                     </div>
                     <p>
                         We kicked off the Spring 2022 version of Spartan Girls Who Code on Saturday with enthusiastic students
-                        and incredible mentors &mdash; we hope your student as just as excited as we are for the coming weeks!
+                        and incredible mentors &mdash; we hope your student is just as excited as we are for the coming weeks!
                     </p>
                     <p>
                         We as a club are so excited to introduce the world of coding to your student! Computer science and programming
