--- a/belizeweb/index.html
+++ b/belizeweb/index.html
@@ -102,7 +102,7 @@
 								</article>
 								<article class="style5">
 									<span class="image">
-										<img src="images/sgwc-mentors-fun-353x326r72.jpg" alt="Photo of SGWC Mentors on a stage hamming it up." />
+										<img src="images/mentorsAtHockeySS22-353x326r72.jpeg" alt="Photo of SGWC Mentors at a Spartan hockey game." />
 									</span>
 									<a href="team.html">
 										<h2>Team</h2>
