fix spelling of Khushi

--- a/belizeweb/team.html
+++ b/belizeweb/team.html
@@ -116,9 +116,9 @@
 											</center>
 										</div>
 
-										<div class="col-4"><span class="image fit"><img src="images/teamPhotos/khushiVora750x1000r72.jpeg" alt="Photo of Kushie" /></span>
+										<div class="col-4"><span class="image fit"><img src="images/teamPhotos/khushiVora750x1000r72.jpeg" alt="Photo of Khushi" /></span>
 											<center>
-												<h3>Kushi</h3>
+												<h3>Khushi</h3>
 												Junior<br> Computer Science
 											</center>
 										</div>
