add week 3 newsletter

--- a/belizeweb/resources.html
+++ b/belizeweb/resources.html
@@ -75,6 +75,12 @@
 									<li style="list-style: disc;">
 										<a href="https://docs.google.com/presentation/d/1oBpMRmxTvKoiEUXn7uVKMKt0lA9fVi-mfpQuCdwz9B4/edit?usp=sharing" target="_blank">05 - For Loops Review - 1.25.22</a>
 									</li>
+									<li style="list-style: disc;">
+										<a href="https://docs.google.com/presentation/d/1eCBLqWCyg92vS60l4BKC7sb4Vme-ipWRfSlSpBM3mKs/edit?usp=sharing" target="_blank">06 - Functions - 1.29.22</a>
+									</li>
+									<li style="list-style: disc;">
+										<a href="https://docs.google.com/presentation/d/15BlVA_4NjVOx2Clf-itxksT4qziKFW7g5xoPTo6Q_4M/edit?usp=sharing" target="_blank">07 - Functions Review - 1.31.22</a>
+									</li>
 								</ul>
 							</section>
 
