fix spacing and character

--- a/belizeweb/news.html
+++ b/belizeweb/news.html
@@ -74,7 +74,7 @@
 										We made it through our the second week! We'd like to thank and congratulate our students for their energy and enthusiasm; our students' parents for their ongoing support and encouragement; our mentors for making each Tuesday and Saturday exciting, engaging, and entertaining; and our advisors for their organization, coordination and commitment to making this a reality. Without you all, we wouldn't be here.
 									</p>
 									<p>
-										You guys make it through loops and functions! Loops and functions are the major foundations of all programming and we’re so proud of the progress you guys have made! Keep up the amazing work.
+										You guys make it through loops and functions! Loops and functions are the major foundations of all programming and we're so proud of the progress you guys have made! Keep up the amazing work.
 
 									</p>
 									<p>
@@ -304,6 +304,7 @@
 								</div>
 							</section>
 							<!-- end week 3 summary -->
+
 							<!-- begin week 2 summary -->
 							<section id="week2">
 								<div class="container col-md-12">
