newsletter week 2 changes

--- a/belizeweb/news.html
+++ b/belizeweb/news.html
@@ -134,46 +134,46 @@
 									<div align="middle" class="col-md-12">
 										<div class="row">
 											<div class="col-md-6" align="middle">
-												<img class="shadow-lg" src="images/news_1/1_zoom.png" width=90%>
+												<img class="shadow-lg" src="images/news_2/slide106.png" width=90%>
 											</div>
 											<div class="col-md-6" align="middle">
-												<img class="shadow-lg" src="images/news_1/2_overview.png" width=90%>
-											</div>
-										</div>
-										<br>
-										<div class="row">
-											<div class="col-md-6" align="middle">
-												<img class="shadow-lg" src="images/news_1/3_curriculum.png" width=90%>
-											</div>
-											<div class="col-md-6" align="middle">
-												<img class="shadow-lg" src="images/news_1/4_project.png" width=90%>
+												<img class="shadow-lg" src="images/news_2/slides206.png" width=90%>
 											</div>
 										</div>
 										<br>
 										<div class="row">
 											<div class="col-md-6" align="middle">
-												<img class="shadow-lg" src="images/news_1/5_programming.png" width=90%>
+												<img class="shadow-lg" src="images/news_2/slide306.png" width=90%>
 											</div>
 											<div class="col-md-6" align="middle">
-												<img class="shadow-lg" src="images/news_1/6_python.png" width=90%>
-											</div>
-										</div>
-										<br>
-										<div class="row">
-											<div class="col-md-6" align="middle">
-												<img class="shadow-lg" src="images/news_1/7_forward.png" width=90%>
-											</div>
-											<div class="col-md-6" align="middle">
-												<img class="shadow-lg" src="images/news_1/8_circle.png" width=90%>
+												<img class="shadow-lg" src="images/news_2/slides406.png" width=90%>
 											</div>
 										</div>
 										<br>
 										<div class="row">
 											<div class="col-md-6" align="middle">
-												<img class="shadow-lg" src="images/news_1/9_turn.png" width=90%>
+												<img class="shadow-lg" src="images/news_2/slides506.png" width=90%>
 											</div>
 											<div class="col-md-6" align="middle">
-												<img class="shadow-lg" src="images/news_1/10_for.png" width=90%>
+												<img class="shadow-lg" src="images/news_2/slides606.png" width=90%>
+											</div>
+										</div>
+										<br>
+										<div class="row">
+											<div class="col-md-6" align="middle">
+												<img class="shadow-lg" src="images/news_2/slides706.png" width=90%>
+											</div>
+											<div class="col-md-6" align="middle">
+												<img class="shadow-lg" src="images/news_2/slides808.png" width=90%>
+											</div>
+										</div>
+										<br>
+										<div class="row">
+											<div class="col-md-6" align="middle">
+												<img class="shadow-lg" src="images/news_2/slides906.png" width=90%>
+											</div>
+											<div class="col-md-6" align="middle">
+												<img class="shadow-lg" src="images/news_2/slides1006.png" width=90%>
 											</div>
 										</div>
 										<br>
@@ -194,9 +194,9 @@
 												<p><i>Katie White</i></p>
 											</div>
 											<div class="col-md-6" align="middle">
-												<img class="shadow-lg" src="images/teamPhotos/jonathan750x1000_78R.jpg" width=50%>
+												<img class="shadow-lg" src="images/teamPhotos/davidVanderSloot.jpg" width=50%>
 												<br>
-												<p><i>Jonathon Moore</i></p>
+												<p><i>David VanderSloot</i></p>
 											</div>
 										</div>
 										<!-- mentor QA -->
@@ -219,22 +219,22 @@
 													I want to learn how to make websites.
 												</p>
 											</div>
-											<div class="col-md-6" align="left"> <!-- Jonathon -->
+											<div class="col-md-6" align="left"> <!-- David -->
 												<p>
 													<b>What are you studying?</b><br>
-													Computer Science, with a minor in Game Design and Development
+													Computational Data Science
 												</p>
 												<p>
 													<b>How did you become interested in computer science?</b><br>
-													I first became interested in computer science in my first computer science class. I didn't know if I'd like it, but I became hooked on the problem-solving aspect of computer science.
+													I went to a coding camp and learned to make a simple game!
 												</p>
 												<p>
 													<b>What's something cool you've done with computer science?</b><br>
-													I've coded a video game that has been sold to raise money for charity. 
+													In one of my classes, we did a project using machine learning to examine photos of Mars and determine what was in the images. 
 												</p>
 												<p>
 													<b>What are you hoping to do with computer science in the future?</b><br>
-													In the future I hope to one day either contribute code to a large game or create a full game on my own.
+													Use this knowledge, and apply it to real world problems for a company of some kind.
 												</p>
 											</div>
 										</div>
