--- a/belizeweb/news.html
+++ b/belizeweb/news.html
@@ -243,52 +243,52 @@
 										<!-- mentor photos -->
 										<div class="row">
 											<div class="col-md-6" align="middle">
-												<img class="shadow-lg" src="images/teamPhotos/judy750x1000.jpg" width=50%>
+												<img class="shadow-lg" src="images/teamPhotos/meganGendjar750x1000r72.jpeg" width=50%>
 												<br>
-												<p><i>Judy Effendi</i></p>
+												<p><i>Megan Gendjar</i></p>
 											</div>
 											<div class="col-md-6" align="middle">
-												<img class="shadow-lg" src="images/teamPhotos/ryan750x1000r72.png" width=50%>
+												<img class="shadow-lg" src="images/teamPhotos/joaoVitor750x1000_72R.jpeg" width=50%>
 												<br>
-												<p><i>Ryan Spencer</i></p>
+												<p><i>Joao Vitor</i></p>
 											</div>
 										</div>
 										<!-- mentor QA -->
 										<div class="row">
-											<div class="col-md-6" align="left"> <!-- Judy -->
+											<div class="col-md-6" align="left"> <!-- Megan -->
 												<p>
 													<b>What are you studying?</b><br>
-													Computer Science, with a minor in Spanish
+													Plant, Soil and Microbial Sciences
 												</p>
 												<p>
 													<b>How did you become interested in computer science?</b><br>
-													I first became interested in Computer Science during my senior year AP Computer Science class. 
+													I started coding in High School and had a lot of fun learning back then, I recently was able to start programming again and joining it with my research interests.  
 												</p>
 												<p>
 													<b>What's something cool you've done with computer science?</b><br>
-													Over the summer, I interned at AIM Plastics and worked on displaying live data on the company's server!
+													When I first learned to code, I made a minesweeper-like program and it was really challenging and rewarding once I got it to work!
 												</p>
 												<p>
 													<b>What are you hoping to do with computer science in the future?</b><br>
-													In the future I want to develop my own application!
+													I am hoping to include coding in my future research and learn more about computational modeling. 
 												</p>
 											</div>
-											<div class="col-md-6" align="left"> <!-- Ryan -->
+											<div class="col-md-6" align="left"> <!-- Joao -->
 												<p>
 													<b>What are you studying?</b><br>
-													Applied Engineering, with a concentration in Suppy Chain Management
+													Majoring in computer Science Computer Science in MSU
 												</p>
 												<p>
 													<b>How did you become interested in computer science?</b><br>
-													I've been around it my last 4 years and have seen how amazing it can be&mdash;and how everyone who does it seems to love it.
+													I wanted to work in Game Design
 												</p>
 												<p>
 													<b>What's something cool you've done with computer science?</b><br>
-													My team and I used MATLAB to program a robot to navigate through an obstacle course in one of my first engineering courses.
+													I wrote a pong game. 
 												</p>
 												<p>
 													<b>What are you hoping to do with computer science in the future?</b><br>
-													I plan on writing code that can help make the process of building infrastructure be safer and more sustainable. 
+													I hope to be working on more games that can improve the mastery of my knowledge
 												</p>
 											</div>
 										</div>
